# semantic-tracer

./: .env.example  .gitignore  BUGFIXES-DAY-14.md  CLAUDE.md  DEPLOYMENT-SUMMARY.md  PHASE-1-AUDIT.md  PRD.md  PROJECT_STRUCTURE.md  PUSH-INSTRUCTIONS.md  README.md  STATUS.md  STRESS_TEST_STATUS.md  TECHNICAL_DESIGN.md  UX-IMPROVEMENTS-TESTING.md  VALIDATION-REPORT.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/commands/: day-11-12.md
.github/: TESTING_CHECKLIST.md
.hive-mind/: COLLECTIVE_MEMORY.md  hive.db  hive.db-shm  hive.db-wal  technical-research-report.md
.hive-mind/sessions/: hive-mind-prompt-swarm-1762758920138-7trvn81na.txt  session-1762758920140-qt2hrzacr-auto-save-1762758950144.json
archive/: DAY-9-10-PERFORMANCE-TESTING.md  README.md
archive/.hive-mind/: SESSION_SUMMARY.md  quick-reference.md
semantic-tracer/tests/: README.md  TEST_STRATEGY.md  setup.ts
src/: App.semantic.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/lineage/: analysis.rs  graph.rs  mod.rs
src-tauri/src/parsers/: dbt_project.rs  dbt_semantic.rs  mod.rs  snowflake.rs
src/constants/: index.ts  legalDefaults.ts  prompts.ts
src/hooks/: useAlignment.ts  useAutoSave.ts  (+4 more)
tests/: DELIVERABLE_SUMMARY.md  README.md  TEST_STRATEGY.md
(+54 files in other folders)
